[gd_scene load_steps=30 format=3 uid="uid://cma77dbhq8kwx"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_ebecy"]
[ext_resource type="Texture2D" uid="uid://671rgw7w2awe" path="res://assets/Player/Hurt (32 x 32).png" id="2_7x81b"]
[ext_resource type="Texture2D" uid="uid://drasccfumlwiv" path="res://assets/Player/Idle (32 x 32).png" id="3_qwbs8"]
[ext_resource type="Texture2D" uid="uid://te04gf0hoj6a" path="res://assets/Player/Jumping (32 x 32).png" id="4_7axns"]
[ext_resource type="Texture2D" uid="uid://ymuwlcn8rb5l" path="res://assets/Player/Running (32 x 32).png" id="5_k3yku"]
[ext_resource type="AudioStream" uid="uid://dwnf10uk5tvyl" path="res://sounds/SFX_Jump_22.wav" id="6_fswbh"]
[ext_resource type="AudioStream" uid="uid://dt3lf1v5e3etn" path="res://sounds/hurt_player.wav" id="6_iwvfv"]
[ext_resource type="Script" path="res://scripts/broom_attack.gd" id="8_nysse"]
[ext_resource type="Texture2D" uid="uid://cykf2ypihfxkl" path="res://assets/broom/broom_attack.png" id="8_rckqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mykie"]
size = Vector2(23, 13.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvqar"]
atlas = ExtResource("2_7x81b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k245v"]
atlas = ExtResource("3_qwbs8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm76w"]
atlas = ExtResource("3_qwbs8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr1c4"]
atlas = ExtResource("4_7axns")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1d5p"]
atlas = ExtResource("5_k3yku")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjqeg"]
atlas = ExtResource("5_k3yku")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxk2"]
atlas = ExtResource("5_k3yku")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f8ok"]
atlas = ExtResource("5_k3yku")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4q6b"]
atlas = ExtResource("5_k3yku")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjvbo"]
atlas = ExtResource("5_k3yku")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4guuv"]
atlas = ExtResource("5_k3yku")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ldjhq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvqar")
}],
"loop": true,
"name": &"hurt",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k245v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm76w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr1c4")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1d5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjqeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f8ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4q6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4guuv")
}],
"loop": true,
"name": &"run",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7np6w"]
size = Vector2(12.7195, 29.2069)

[sub_resource type="AtlasTexture" id="AtlasTexture_85sak"]
atlas = ExtResource("8_rckqw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n30l"]
atlas = ExtResource("8_rckqw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2om3h"]
atlas = ExtResource("8_rckqw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tux0"]
atlas = ExtResource("8_rckqw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yli4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85sak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n30l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2om3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tux0")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rs10k"]
size = Vector2(16, 26)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource("1_ebecy")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -4)
shape = SubResource("RectangleShape2D_mykie")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ldjhq")
animation = &"run"
autoplay = "idle"
frame_progress = 0.414554

[node name="animator" type="AnimationPlayer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.787485, 1.10067)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0.634932, -2.72561)
rotation = 1.5708
shape = SubResource("RectangleShape2D_7np6w")
debug_color = Color(0.843137, 0.32549, 0.505882, 0.419608)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(3, -4)
scale = Vector2(2, 4)
target_position = Vector2(8, 0)
collision_mask = 4
hit_from_inside = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-1, -4)
scale = Vector2(2, 4)
target_position = Vector2(-8, 0)
collision_mask = 4
hit_from_inside = true

[node name="hurtFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_iwvfv")
volume_db = -10.0

[node name="jumpFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fswbh")
volume_db = -5.0

[node name="Broom-Attack" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 32
script = ExtResource("8_nysse")

[node name="texture" type="AnimatedSprite2D" parent="Broom-Attack"]
visible = false
position = Vector2(19, -12)
sprite_frames = SubResource("SpriteFrames_yli4y")

[node name="broom_attack_colision" type="CollisionShape2D" parent="Broom-Attack"]
position = Vector2(25, -9)
shape = SubResource("RectangleShape2D_rs10k")
disabled = true

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Broom-Attack" to="Broom-Attack" method="_on_area_entered"]
[connection signal="body_entered" from="Broom-Attack" to="Broom-Attack" method="_on_body_entered"]
